--- a/css/styles.css
+++ b/css/styles.css
@@ -113,6 +113,7 @@ header {
 
 .contacts {
     display: flex;
+    align-items: center;
     margin-left: auto;
 }
 
@@ -125,7 +126,6 @@ header {
     line-height: 1.14;
     letter-spacing: 0.02em;
     color: var(--primary-text-color);
-    
 }
 
 .contacts-list-link:hover,
@@ -133,13 +133,40 @@ header {
     color: var(--accent-color);
 }
 
+.email-img {
+    margin-right: 10px;
+    fill: var(--primary-text-color);
+}
+
+.email-img:hover,
+.email-img:focus {
+    fill: var(--accent-color);
+}
+
+.phone-img {
+    margin-right: 10px;
+    fill: var(--primary-text-color);
+}
+
+.phone-img:hover,
+.phone-img:focus {
+    fill: var(--accent-color);
+}
+
 /* ========END HEDER======== */
 
 /* ========START HERO======== */
 .hero {
+    background-image: linear-gradient(
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)), 
+        url(../images/hero.jpg);
+    background-size: cover;
+    background-color: #C4C4C4;
     padding-top: 200px;
     padding-bottom: 200px;
-    background-color: #2F303A;
+    
+    
 }
  
 .hero-title {
