--- a/css/styles.css
+++ b/css/styles.css
@@ -476,6 +476,10 @@ color: rgba(255, 255, 255, 0.6);
 .portfolio-btn:focus {
     background-color: var(--accent-color);
     color: #FFFFFF;
+    box-shadow: 
+        0px 3px 1px rgba(0, 0, 0, 0.1), 
+        0px 1px 2px rgba(0, 0, 0, 0.08), 
+        0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .portfolio-list {
